# marlware

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  activate_env.sh  install_docker.sh  install_sc2.sh  pyproject.toml  pytest.ini
docker/: Dockerfile  requirements.txt
qmix/: execute_trial.py  tune.py
qmix/abstract/construct/: __init__.py  registry_blueprint.py
qmix/agent/: __init__.py  drqn_agent.py  trainable.py  trainer.py
qmix/agent/abstract/: registration.py
qmix/agent/construct/: qmix_shared_params.py
qmix/agent/networks/: __init__.py  hyper_network.py  mixing_network.py  recurrent_q_network.py
qmix/agent/tuner/: __init__.py  offline_tuner.py
qmix/common/: constants.py  methods.py
qmix/config/: qmix-trial-directives.yaml
qmix/delegator/: __init__.py  trainable.py  trainer.py
qmix/environment/: __init__.py  starcraft.py
qmix/memory/: __init__.py  generic.py
qmix/networks/: __init__.py  hyper_network.py  mixing_network.py  recurrent_q_network.py
qmix/selector/: __init__.py  epsilon_greedy.py
qmix/tune/: tuner.py
src/: tune.py  tuner.py
src/abstract/: __init__.py  base_construct.py  cortex.py  trainable.py  tuner.py
src/conf/: trial.yaml
src/cortex/: __init__.py  base_multiagent_cortex.py  multiagent.py  multiagent_cortex.py  rec_q_cortex.py
src/evaluator/: __init__.py  core_evaluator.py
src/heuristic/: epsilon_greedy.py
src/learner/: __init__.py  recurrent_q_learner.py
src/logger/: __init__.py  trace_logger.py
src/net/: __init__.py  drqn.py  mixing_network.py  q_mixer.py  qmixer.py
src/node/: __init__.py  deserialize.py  serialize.py
src/registry/: __init__.py  construct.py  trainable.py
src/trainable/: __init__.py  base_qmix.py  construct.py  one_step_qmix.py  qmix_core.py
src/transforms/: __init__.py  one_hot.py
src/tuner/: __init__.py  core_tuner.py  proto_tuner.py  sync_tuner.py  tuner.py
src/util/: constants.py  methods.py
src/worker/: __init__.py  interaction.py
tests/unit/: test_agent.py  test_drqn_network.py  test_env.py  test_env_nop.py  test_mixer.py  test_petting_zoo.py
(+65 files in other folders)
